--- a/src/styles/components/_infoutil.scss
+++ b/src/styles/components/_infoutil.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     padding-top: 80px;
-    padding-bottom: 40px;
+    padding-bottom: 32px;
 }
 
 .info-card {
