--- a/src/styles/components/_telephones.scss
+++ b/src/styles/components/_telephones.scss
@@ -5,7 +5,7 @@
     align-items: center;
 
     @media screen and (max-width: $desktop) {
-        margin: 4em 0;
+        margin: 32px 0;
     }
   
     .contentTitles {
